src/test/deca/context/invalid/return_int_dans_objet.deca
// Description :
// return un int au lieu d un objet donc problème ...

// Resultats :
// Echec

class Tactique { }

class Coach {
    Tactique choisir() {
        return 4;
    }
}

{ }